--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <br>
     <br>
     <button id="mySubmit">submit</button>
+
+    <div id="wordleGrid"></div>
+    
+
+    <h4 id="numCount">0</h4>
+    <button id="increment">increment</button>
     <script src="index.js"></script>
+
+
+
 </body>
 </html>
